tests/ui/transparent/arguments_not_supported.stderr
error: format arguments are not supported with #[error(transparent)]
 --> tests/ui/transparent/arguments_not_supported.rs:8:20
  |
8 | #[error(transparent, code = 42)]
  |                    ^
